<resources>
    <string name="app_name">Sportinate</string>
    <string name="title_activity_browse">BrowseActivity</string>
    <string name="title_home">Home</string>
    <string name="title_groups">My Groups</string>
    <string name="title_profile">My Profile</string>
    <string name="make_profile">Make Profile</string>
    <string name="skip">Skip</string>
    <string name="landing_question">Would you like to make a profile?</string>
    <string name="landing_description">Making a profile helps us list groups that match your preferences better</string>
    <string name="create_new_group">Create New Group</string>
    <string name="success_text">You have successfully created a \"SPORT\" group!</string>

    <string name="new_tooltip">Little to no experience playing. This may be your first time playing.</string>
    <string name="intermediate_tooltip">Some amount of experience playing. </string>
    <string name="advanced_tooltip">Good amount of experience playing. You\'ve played the sport for a decent amount of time.</string>
    <string name="expert_tooltip">High level of experience playing. You have been playing the sport for a long time.</string>
    <string name="casual_tooltip">Your goals are to have fun, meet new people, or try out a new activity.</string>
    <string name="competitive_tooltip">Your goals are primarily to improve your skills or find others to compete with.</string>
    <string name="either_tooltip">Your goals include a mix between casual and competitive.</string>

    <string name="user_name">Name<font color='#FF6961'>*</font></string>
    <string name="user_Email">Email<font color='#FF6961'>*</font></string>
    <string name="group_desc">Group Description</string>
    <string name="profile_info_message">*Note: The contact info you enter will be seen by all team members.</string>


    <!--    Group Creation Fields-->
    <string name="group_name">Group Name<font color='#FF6961'>*</font></string>
    <string name="sport">Sport<font color='#FF6961'>*</font></string>
    <string name="skill_level">Skill Level<font color='#FF6961'>*</font></string>
    <string name="availability">Availability<font color='#FF6961'>*</font></string>
    <string name="meeting_times">Group Meeting Times<font color='#FF6961'>*</font></string>
    <string name="location">Location<font color='#FF6961'>*</font></string>
    <string name="commitment_level">Commitment Level<font color='#FF6961'>*</font></string>
    <string name="user_desc">Description</string>


    <string name="loc1">ARC</string>
    <string name="loc2">Stadium</string>
    <string name="loc3">CRCE</string>

    <string name="group_creation_message">*Note: By creating this group, you are agreeing to put your name and contact information down as the group coordinator</string>




    <string-array name="sports_array">
        <item>Basketball</item>
        <item>Soccer</item>
        <item>Tennis</item>
        <item>Ping Pong</item>
        <item>Others</item>
    </string-array>

    <string-array name="dates_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="dates_short_array">
        <item>Mon</item>
        <item>Tues</item>
        <item>Wed</item>
        <item>Thurs</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <string-array name="time_array">
        <item>PM</item>
        <item>AM</item>
    </string-array>


</resources>