<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sportinate.bottom_nav_ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/navigation_groups"
        android:name="com.example.sportinate.bottom_nav_ui.groups.GroupsFragment"
        android:label="@string/title_groups"
        tools:layout="@layout/fragment_groups" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.sportinate.bottom_nav_ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>