<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/sportinate_logo"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="100dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/landing_question"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/landing_description"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginBottom="50dp"
        />

    <Button
        android:id="@+id/make_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_profile"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:backgroundTint="@color/sportinate_gold"
        />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:backgroundTint="@color/sportinate_gold"
        />


<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/nav_view"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="0dp"-->
<!--        android:layout_marginEnd="0dp"-->
<!--        android:background="?android:attr/windowBackground"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:menu="@menu/bottom_nav_menu" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_host_fragment_activity_browse"-->
<!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:defaultNavHost="true"-->
<!--        app:layout_constraintBottom_toTopOf="@id/nav_view"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:navGraph="@navigation/mobile_navigation" />-->

</LinearLayout>
